--- a/modificacion_de_archivos/.vscode/settings.json
+++ b/modificacion_de_archivos/.vscode/settings.json
@@ -18,5 +18,10 @@
         "titleBar.inactiveBackground": "#21573299",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#215732"
+    "peacock.color": "#215732",
+    "docwriter.language": "Spanish",
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.python"
+    },
+    "python.formatting.provider": "none"
 }
